<resources>
    <string name="app_name">Brain Training App</string>
    <string name="intro">Welcome to Brain Games!</string>
    <string name="memory_btn">Memory Exercises</string>
    <string name="math_btn">Math Exercises</string>
    <string name="track_btn">Track Your Progress</string>
    <string name="word_inst">This exercise will challenge your memory. You will be given 10 seconds to memorize 7 words. Afterwards, you will be asked to write down the words that were displayed to you.</string>
    <string name="play">Play</string>
    <string name="go_back">Return to Homepage</string>
    <string name="word_user_instr">Enter the words below! Note: Separate your words by space (" ")</string>
    <string name="btn_done">Done</string>
    <string name="btn_score">See Score</string>
    <string name="play_again">Play Again</string>
    <string name="choose_difficulty">Please select your difficulty level:</string>
    <string name="beginner_btn">Beginner</string>
    <string name="intermediate_btn">Intermediate</string>
    <string name="advance_btn">Advanced</string>
    <string name="sub_ans">Check Answer</string>
    <string name="calc">Calculate the value of:</string>
    <string name="start_btn">Start!</string>
    <string name="correct_incorrect">0 Correct, 0 Incorrect</string>
    <string name="timer">0:00</string>
    <string name="results">\"You answered 0 out of 0 questions correctly in 60 seconds!</string>
    <string name="prob">4 + 6 = ?</string>
</resources>
