<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Plum"
    tools:context=".beginner">

    <Button
        android:id="@+id/ans_btn"
        android:layout_width="143dp"
        android:layout_height="38dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="182dp"
        android:text="@string/sub_ans"
        android:visibility="gone"
        android:background="@color/black"
        android:textColor="@color/white"/>

    <EditText
        android:id="@+id/user_ans"
        android:layout_width="wrap_content"
        android:layout_height="57dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="215dp"
        android:ems="10"
        android:inputType="numberSigned"
        android:visibility="gone" />

    <TextView
        android:id="@+id/calc"
        android:layout_width="232dp"
        android:layout_height="47dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="91dp"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/calc"
        android:textSize="22sp"
        android:visibility="gone"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/Problem"
        android:layout_width="193dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/calc"
        android:layout_centerHorizontal="true"
        android:text="@string/prob"
        android:textSize="30sp"
        android:visibility="gone"
        android:textColor="@color/black"/>

    <Button
        android:id="@+id/start"
        android:layout_width="142dp"
        android:layout_height="38dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="225dp"
        android:text="@string/start_btn"
        android:visibility="visible"
        android:background="@color/black"
        android:textColor="@color/white"/>

    <TextView
        android:id="@+id/num_correct"
        android:layout_width="252dp"
        android:layout_height="45dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="22dp"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/correct_incorrect"
        android:textSize="24sp"
        android:visibility="gone"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/timer"
        android:layout_width="96dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:gravity="center_horizontal|center_vertical"
        android:includeFontPadding="false"
        android:text="@string/timer"
        android:textAllCaps="false"
        android:textSize="24sp"
        android:visibility="gone"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/results"
        android:layout_width="286dp"
        android:layout_height="135dp"
        android:layout_below="@+id/calc"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/results"
        android:textSize="24sp"
        android:visibility="gone"
        android:textColor="@color/black"/>

</RelativeLayout>