<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Plum"
    >

    <TextView
        android:id="@+id/instructions"
        android:layout_width="329dp"
        android:layout_height="173dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/word_inst"
        android:textSize="20dp"
        android:textColor="@color/black"

        />

    <Button
        android:id="@+id/play"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="82dp"
        android:layout_marginEnd="65dp"
        android:text="@string/play"
        android:background="@color/black"
        android:textColor="@color/white"/>

    <Button
        android:id="@+id/go_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/play"
        android:layout_alignParentStart="true"
        android:layout_marginStart="56dp"
        android:text="@string/go_back"
        android:background="@color/black"
        android:textColor="@color/white"/>
</RelativeLayout>