<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Plum"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="32dp"
        android:text="@string/intro"
        android:textColor="@color/black"
        android:textSize="40dp"
        android:textStyle="bold"
        android:textAlignment="center"/>

    <Button
        android:id="@+id/memory"
        android:layout_width="177dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="203dp"
        android:background="@color/black"
        android:text="@string/memory_btn"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/math"
        android:layout_width="177dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="132dp"
        android:background="@color/black"
        android:text="@string/math_btn"
        android:textColor="@color/white" />

</RelativeLayout>